--- a/composer.json
+++ b/composer.json
@@ -12,41 +12,47 @@
         }
     ],
     "require": {
-        "php": "~5.3|~7.0",
-        "symfony/framework-bundle": "~2.3|~3.0",
-        "symfony/security-bundle": "~2.3|~3.0",
-        "symfony/security-acl": "~2.2|~3.0",
-        "symfony/dependency-injection": "~2.3|~3.0",
-        "symfony/routing": "~2.3|~3.0",
+        "php": ">=7.1",
+        "symfony/framework-bundle": "~3.0",
+        "symfony/security-bundle": "~3.0",
+        "symfony/security-acl": "~3.0",
+        "symfony/dependency-injection": "~3.0",
+        "symfony/routing": "~3.0",
         "jms/metadata": "~1.0",
         "jms/parser-lib": "~1.0",
-        "jms/aop-bundle": "~1.0",
-        "jms/di-extra-bundle": "~1.4"
+        "jms/aop-bundle": "~1.0"
+    },
+    "suggest": {
+        "jms/di-extra-bundle": "Add extra DependencyInjection functionality"
     },
     "require-dev": {
-        "sensio/framework-extra-bundle": "^2.2.1|~3.0",
-        "symfony/class-loader": "~2.1|~3.0",
-        "symfony/yaml": "^2.2.11|~3.0",
-        "symfony/browser-kit": "~2.0|~3.0",
-        "symfony/finder": "^2.0.5|~3.0",
-        "symfony/css-selector": "^2.0.5|~3.0",
-        "symfony/process": "^2.0.5|~3.0",
+        "sensio/framework-extra-bundle": "~3.0",
+        "symfony/class-loader": "~3.0",
+        "symfony/yaml": "~3.0",
+        "symfony/browser-kit": "~3.0",
+        "symfony/finder": "~3.0",
+        "symfony/css-selector": "~3.0",
+        "symfony/process": "~3.0",
         "doctrine/doctrine-bundle": "~1.0",
-        "symfony/twig-bundle": "~2.2|~3.0",
-        "symfony/twig-bridge": "^2.2.6|~3.0",
+        "symfony/twig-bundle": "~3.0",
+        "symfony/twig-bridge": "~3.0",
         "twig/twig": "^1.23.1",
         "doctrine/orm": "~2.3",
         "doctrine/common": "~2.3",
-        "symfony/form": "~2.2|~3.0",
-        "symfony/validator": "~2.2|~3.0",
-        "symfony/phpunit-bridge": "~2.7|~3.0"
+        "symfony/form": "~3.0",
+        "symfony/validator": "~3.0",
+        "symfony/phpunit-bridge": "~3.0",
+        "jms/di-extra-bundle": "~1.4",
+        "symfony/templating": "~3.0",
+        "symfony/var-dumper": "~3.0",
+        "symfony/asset": "~3.0"
     },
     "autoload": {
         "psr-4": { "JMS\\SecurityExtraBundle\\": "" }
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.6-dev"
+            "dev-master": "1.7-dev"
         }
     }
 }
